refactor: extract API paths and messages to constants and URI location
- Create ApiConstants class with all endpoint paths
- Replace string literals with constants in @PostMapping annotations